# sopra

./: .env.example  .gitignore  .nojekyll  README.md  _quarto.yml  accounts.html  accounts.qmd  app.py  credentials.html  credentials.qmd  index.html  index.qmd  mac-setup.html  mac-setup.qmd  main.py  mssql-connection.html  mssql-connection.qmd  mssql-example.html  mssql-example.qmd  mssql-vscode.html  mssql-vscode.qmd  practice-repositories.html  practice-repositories.qmd  pyproject.toml  search.json  sql_example.py  streamlit.html  streamlit.qmd  theme.scss  windows-setup.html  windows-setup.qmd
models/: __init__.py  discount.py
repositories/: __init__.py  db.py  discount_repo.py
services/: __init__.py  discount_service.py
setup/: .env.test
site_libs/bootstrap/: bootstrap-d44f74c4fc11d621972452c195799036.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-a8f83c6add4bed76711a7100e5df97c0.css
